CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(TEST)
SET(CMAKE_CXX_FLAGS "-std=c++14 -g")
MESSAGE(STATUS ${CMAKE_BINARY_DIR})
if(DEFINED USE_RTTI) 
	MESSAGE(STATUS "use rtti")
	if(USE_RTTI)
		MESSAGE(STATUS "RTTI" ${USE_RTTI})
	endif()
endif()
SET(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/)
ADD_SUBDIRECTORY(src)
