CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
INCLUDE(ExternalProject)
PROJECT(TEST)
SET(CMAKE_CXX_FLAGS "-O0 -std=c++14 -g")
SET(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR})
string(ASCII 27 Esc)
set(ColourReset "${Esc}[m")
set(Red         "${Esc}[31m")
message(STATUS "${Red}This is Red${ColourReset}")
ADD_SUBDIRECTORY(src)
