CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
INCLUDE(ExternalProject)
PROJECT(TEST)

if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    include(CheckFunctionExists)
    CHECK_FUNCTION_EXISTS(clock_gettime HAVE_CLOCK_GETTIME)
    if(NOT HAVE_CLOCK_GETTIME)
        set(DEFINE_CLOCK_GETTIME "-DNO_CLOCK_GETTIME_IN_MAC")
    endif()
endif()
add_definitions(-std=c++11)
SET(CMAKE_CXX_FLAGS "-O0 -g ${DEFINE_CLOCK_GETTIME}")
SET(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR})
string(ASCII 27 Esc)
set(ColourReset "${Esc}[m")
set(Red         "${Esc}[31m")
message(STATUS "${Red}This is Red${ColourReset}")
ADD_SUBDIRECTORY(src)
