CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(TestExample)
SET(CMAKE_CXX_FLAGS "-std=c++14 -g")
SET(LIBS pthread)
ADD_EXECUTABLE(test_open_dir ${CMAKE_SOURCE_DIR}/test_open_dir.cpp)
TARGET_LINK_LIBRARIES(test_open_dir ${LIBS})
INSTALL(TARGETS test_open_dir RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
