CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(TestExample)
SET(CMAKE_CXX_FLAGS "-std=c++14 -g")
SET(LIBS pthread)
ADD_EXECUTABLE(test_open_dir ${CMAKE_SOURCE_DIR}/test_open_dir.cpp)
TARGET_LINK_LIBRARIES(test_open_dir ${LIBS})
ADD_EXECUTABLE(test_pthread_key ${CMAKE_SOURCE_DIR}/test_pthread_key.cpp)
TARGET_LINK_LIBRARIES(test_pthread_key ${LIBS})
ADD_EXECUTABLE(test_placement_new ${CMAKE_SOURCE_DIR}/test_placement_new.cpp)
TARGET_LINK_LIBRARIES(test_placement_new ${LIBS})
INSTALL(TARGETS test_open_dir test_pthread_key test_placement_new
        RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
