CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(TestExample)
SET(CMAKE_CXX_FLAGS "-std=c++14 -g")
SET(LIBS pthread)
FILE(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FOREACH(CPP_SOURCE ${SOURCES})
    GET_FILENAME_COMPONENT(CPP_SOURCE_WE ${CPP_SOURCE} NAME_WE)
    ADD_EXECUTABLE(${CPP_SOURCE_WE} ${CPP_SOURCE})
    TARGET_LINK_LIBRARIES(${CPP_SOURCE_WE} ${LIBS})
    INSTALL(TARGETS ${CPP_SOURCE_WE} RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
ENDFOREACH()
