CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(data_structure)
FILE(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
INCLUDE_DIRECTORIES(${CMAKEE_INSTALL_PREFIX}/include)
ADD_LIBRARY(data_structure STATIC ${SOURCES})
FILE(GLOB HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
INSTALL(TARGETS data_structure ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
INSTALL(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
