CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(proto)
add_definitions(-std=c++11)
FIND_PACKAGE(Protobuf REQUIRED)
message(STATUS "wangziliang ${Protobuf_INCLUDE_DIR}")
message(STATUS "wangziliang ${Protobuf_LIBRARY}")
FILE(GLOB protofiles "${CMAKE_CURRENT_SOURCE_DIR}/*.proto")
include_directories(${CMAKE_INSTALL_PREFIX}/include ${Protobuf_INCLUDE_DIR})
PROTOBUF_GENERATE_CPP(PROTOSRCS PROTOHDRS ${protofiles})
ADD_LIBRARY(proto STATIC ${PROTOSRCS} ${PROTOHDRS})
TARGET_LINK_LIBRARIES(proto ${Protobuf_LIBRARY})
INSTALL(TARGETS proto ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
INSTALL(FILES ${PROTOHDRS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include)