CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(utils)
FILE(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
INCLUDE_DIRECTORIES(${CMAKEE_INSTALL_PREFIX}/include)
ADD_LIBRARY(utils STATIC ${SOURCES})
FILE(GLOB HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
INSTALL(TARGETS utils ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
INSTALL(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
